--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
+    "gulp-minify": "^3.1.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
