--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx gulp watch"
+    "dev": "npx gulp watch",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "normalize-scss": "^7.0.1"
+    "express": "^4.17.1",
+    "normalize-scss": "^7.0.1",
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "browser-sync": "^2.26.13",
